--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "homepage": "",
   "dependencies": {
     "bcrypt": "^6.0.0",
+    "bwip-js": "^4.7.0",
     "cors": "^2.8.5",
     "dotenv": "^17.2.2",
     "express": "^5.1.0",
@@ -28,6 +29,7 @@
     "morgan": "^1.10.1",
     "multer": "^2.0.2",
     "mysql2": "^3.15.0",
+    "pdfkit": "^0.17.2",
     "pg": "^8.16.3",
     "pg-hstore": "^2.3.4",
     "sequelize": "^6.37.7",
